--- a/en/projeto1.html
+++ b/en/projeto1.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Project developed as a Final Course Work for a pet boarding and day care company, using the technologies HTML, CSS, JavaScript, TypeScript, Angular, PHP, and MySQL.">
     <title>Prudente Casa Pet</title>
+    <link rel="stylesheet" href="../assets/css/style.css">    
     <link rel="stylesheet" href="../assets/css/projeto1.css">
 </head>
 <body>
