--- a/pt/projeto1.html
+++ b/pt/projeto1.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Projeto desenvolvido como Trabalho de Conclusão de Curso para uma empresa de hospedagem e day care pet, utilizando as técnologias HTML, CSS, JavaScript, TypeScript, Angular, PHP e MySQL">
     <title>Prudente Casa Pet</title>
+    <link rel="stylesheet" href="../assets/css/style.css">    
     <link rel="stylesheet" href="../assets/css/projeto1.css">
 </head>
 <body>
