--- a/en/index.html
+++ b/en/index.html
@@ -45,7 +45,7 @@
                     <div class="info">
                         <h3>Who am I?</h3>
                         <p>Hello, my name is Patrícia! I have a great passion for exploring the vast world of software development, and I am constantly seeking new challenges and learning opportunities.</p>
-                        <p>I graduated as a Systems Development Technician from Etec Sales Gomes. Currently, I am in my second semester of Software Engineering at Infnet.</p>
+                        <p>I graduated as a Systems Development Technician from Etec Sales Gomes. Currently, I am in my fourth semester of Software Engineering at Infnet.</p>
                         <div class="icones">
                             <a href="https://github.com/patricia-diasr" target="_blank" class="icone" title="Github Link">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="42" height="42" fill="currentColor" class="bi bi-github" viewBox="0 0 16 16">
@@ -73,6 +73,26 @@
             <h3>Technologies and Tools</h3>
 
             <div class="items">
+                <div class="item">
+                    <div class="card">
+                        <div class="face front">
+                            <img src="../assets/images/java-color.png" alt="Java" width="90" height="90">
+                        </div>
+                        <div class="face back">
+                            <span class="tech-name">Java</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="card">
+                        <div class="face front">
+                            <img src="../assets/images/springboot-color.svg" alt="Spring Boot">
+                        </div>
+                        <div class="face back">
+                            <span class="tech-name">Spring Boot</span>
+                        </div>
+                    </div>
+                </div>
                 <div class="item">
                     <div class="card">
                         <div class="face front">
@@ -116,6 +136,16 @@
                 <div class="item">
                     <div class="card">
                         <div class="face front">
+                            <img src="../assets/images/nodedotjs-color.svg" alt="Node.js">
+                        </div>
+                        <div class="face back">
+                            <span class="tech-name">Node.js</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="card">
+                        <div class="face front">
                             <img src="../assets/images/angular-color.svg" alt="Angular">
                         </div>
                         <div class="face back">
@@ -129,7 +159,7 @@
                             <img src="../assets/images/react-color.svg" alt="React">
                         </div>
                         <div class="face back">
-                            <span class="tech-name">React</span>
+                            <span class="tech-name">React and React Native</span>
                         </div>
                     </div>
                 </div>
@@ -232,27 +262,6 @@
                 <div class="dots">
                     <span class="dot active" onclick="currentSlide(1)"></span>
                     <span class="dot" onclick="currentSlide(2)"></span>
-                    <span class="dot" onclick="currentSlide(3)"></span>
-                    <span class="dot" onclick="currentSlide(4)"></span>
-                </div>
-            </div>
-            <div class="slide">
-                <div class="project-image"></div>
-                <div class="project-info">
-                    <div>
-                        <h4>ToDo List</h4>
-                        <p>ToDo List application, where it's possible to register, edit, and delete tasks and filter them by name, date, importance, and completion status.</p>
-                        <p><strong>Technologies:</strong> React.js, Firebase Realtime Database</p>
-                    </div>
-                    <a href="https://patricia-diasr.github.io/todo/" target="_blank" title="Veja o site ToDo List">See site</a>
-                </div>
-                <div class="prev" onclick="plusSlides(-1)"><span class="material-symbols-outlined">navigate_before</span></div>
-                <div class="next" onclick="plusSlides(1)"><span class="material-symbols-outlined">navigate_next</span></div>
-                <div class="dots">
-                    <span class="dot" onclick="currentSlide(1)"></span>
-                    <span class="dot active" onclick="currentSlide(2)"></span>
-                    <span class="dot" onclick="currentSlide(3)"></span>
-                    <span class="dot" onclick="currentSlide(4)"></span>
                 </div>
             </div>
             <div class="slide">
@@ -269,31 +278,10 @@
                 <div class="next" onclick="plusSlides(1)"><span class="material-symbols-outlined">navigate_next</span></div>
                 <div class="dots">
                     <span class="dot" onclick="currentSlide(1)"></span>
-                    <span class="dot" onclick="currentSlide(2)"></span>
-                    <span class="dot active" onclick="currentSlide(3)"></span>
-                    <span class="dot" onclick="currentSlide(4)"></span>
+                    <span class="dot active" onclick="currentSlide(2)"></span>
                 </div>
             </div>
-            <div class="slide">
-                <div class="project-image"></div>
-                <div class="project-info">
-                    <div>
-                        <h4>Latte Lounge</h4>
-                        <p>Institutional website developed for a fictional café, with the pages About, Menu, Events, News, and Contact.</p>
-                        <p><strong>Technologies:</strong> Wordpress</p>
-                    </div>
-                    <a href="http://latte-lounge.000.pe/" target="_blank" title="Veja site Latte Lounge">See site</a>
-                </div>
-                <div class="prev" onclick="plusSlides(-1)"><span class="material-symbols-outlined">navigate_before</span></div>
-                <div class="next" onclick="plusSlides(1)"><span class="material-symbols-outlined">navigate_next</span></div>
-                <div class="dots">
-                    <span class="dot" onclick="currentSlide(1)"></span>
-                    <span class="dot" onclick="currentSlide(2)"></span>
-                    <span class="dot" onclick="currentSlide(3)"></span>
-                    <span class="dot active" onclick="currentSlide(4)"></span>
-                </div>
-            </div>
-        </section> 
+        </section>
         <section id="contacts">
             <h3>Contact Me:</h3>
             <form action="https://api.staticforms.xyz/submit" method="post">
