--- a/pt/index.html
+++ b/pt/index.html
@@ -45,7 +45,7 @@
                     <div class="info">
                         <h3>Quem sou eu?</h3>
                         <p>Olá, meu nome é Patrícia! Tenho uma grande paixão por explorar o vasto mundo do desenvolvimento de software, e estou constantemente em busca de novos desafios e oportunidades de aprendizado.</p>
-                        <p>Sou formada em Técnico em Desenvolvimento de Sistemas pela Etec Sales Gomes. Nesse momento, estou no meu segundo período de Engenharia de Software na Infnet.</p>
+                        <p>Sou formada em Técnico em Desenvolvimento de Sistemas pela Etec Sales Gomes. Nesse momento, estou no meu quarto período de Engenharia de Software na Infnet.</p>
                         <div class="icones">
                             <a href="https://github.com/patricia-diasr" target="_blank" class="icone" title="Link do Github">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="42" height="42" fill="currentColor" class="bi bi-github" viewBox="0 0 16 16">
@@ -73,6 +73,26 @@
             <h3>Tecnologias e Ferramentas</h3>
 
             <div class="items">
+                <div class="item">
+                    <div class="card">
+                        <div class="face front">
+                            <img src="../assets/images/java-color.png" alt="Java" width="90" height="90">
+                        </div>
+                        <div class="face back">
+                            <span class="tech-name">Java</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="card">
+                        <div class="face front">
+                            <img src="../assets/images/springboot-color.svg" alt="Spring Boot">
+                        </div>
+                        <div class="face back">
+                            <span class="tech-name">Spring Boot</span>
+                        </div>
+                    </div>
+                </div>
                 <div class="item">
                     <div class="card">
                         <div class="face front">
@@ -116,6 +136,16 @@
                 <div class="item">
                     <div class="card">
                         <div class="face front">
+                            <img src="../assets/images/nodedotjs-color.svg" alt="Node.js">
+                        </div>
+                        <div class="face back">
+                            <span class="tech-name">Node.js</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="card">
+                        <div class="face front">
                             <img src="../assets/images/angular-color.svg" alt="Angular">
                         </div>
                         <div class="face back">
@@ -129,7 +159,7 @@
                             <img src="../assets/images/react-color.svg" alt="React">
                         </div>
                         <div class="face back">
-                            <span class="tech-name">React</span>
+                            <span class="tech-name">React e React Native</span>
                         </div>
                     </div>
                 </div>
@@ -150,6 +180,16 @@
                         </div>
                         <div class="face back">
                             <span class="tech-name">PHP</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="card">
+                        <div class="face front">
+                            <img src="../assets/images/dotnet-color.svg" alt=".NET">
+                        </div>
+                        <div class="face back">
+                            <span class="tech-name">.NET</span>
                         </div>
                     </div>
                 </div>
@@ -232,27 +272,6 @@
                 <div class="dots">
                     <span class="dot active" onclick="currentSlide(1)"></span>
                     <span class="dot" onclick="currentSlide(2)"></span>
-                    <span class="dot" onclick="currentSlide(3)"></span>
-                    <span class="dot" onclick="currentSlide(4)"></span>
-                </div>
-            </div>
-            <div class="slide">
-                <div class="project-image"></div>
-                <div class="project-info">
-                    <div>
-                        <h4>Todo List</h4>
-                        <p>Aplicação de ToDo List, em que é possível cadastrar, editar e deletar tarefas e filtrá-las a partir do nome, data, importância e status de conclusão.</p>
-                        <p><strong>Tecnologias:</strong> React.js, Firebase Realtime Database</p>
-                    </div>
-                    <a href="https://patricia-diasr.github.io/todo/" target="_blank" title="Ver site ToDo">Ver site</a>
-                </div>
-                <div class="prev" onclick="plusSlides(-1)"><span class="material-symbols-outlined">navigate_before</span></div>
-                <div class="next" onclick="plusSlides(1)"><span class="material-symbols-outlined">navigate_next</span></div>
-                <div class="dots">
-                    <span class="dot" onclick="currentSlide(1)"></span>
-                    <span class="dot active" onclick="currentSlide(2)"></span>
-                    <span class="dot" onclick="currentSlide(3)"></span>
-                    <span class="dot" onclick="currentSlide(4)"></span>
                 </div>
             </div>
             <div class="slide">
@@ -269,28 +288,7 @@
                 <div class="next" onclick="plusSlides(1)"><span class="material-symbols-outlined">navigate_next</span></div>
                 <div class="dots">
                     <span class="dot" onclick="currentSlide(1)"></span>
-                    <span class="dot" onclick="currentSlide(2)"></span>
-                    <span class="dot active" onclick="currentSlide(3)"></span>
-                    <span class="dot" onclick="currentSlide(4)"></span>
-                </div>
-            </div>
-            <div class="slide">
-                <div class="project-image"></div>
-                <div class="project-info">
-                    <div>
-                        <h4>Latte Lounge</h4>
-                        <p>Site institucional desenvolvido para uma cafeteria fictícia, com as páginas de Sobre, Cardápio, Eventos, Notícias e Contato.</p>
-                        <p><strong>Tecnologias:</strong> Wordpress</p>
-                    </div>
-                    <a href="http://latte-lounge.000.pe/" target="_blank" title="Ver site Latte Lounge">Ver site</a>
-                </div>
-                <div class="prev" onclick="plusSlides(-1)"><span class="material-symbols-outlined">navigate_before</span></div>
-                <div class="next" onclick="plusSlides(1)"><span class="material-symbols-outlined">navigate_next</span></div>
-                <div class="dots">
-                    <span class="dot" onclick="currentSlide(1)"></span>
-                    <span class="dot" onclick="currentSlide(2)"></span>
-                    <span class="dot" onclick="currentSlide(3)"></span>
-                    <span class="dot active" onclick="currentSlide(4)"></span>
+                    <span class="dot active" onclick="currentSlide(2)"></span>
                 </div>
             </div>
         </section> 
