Adicionando projeto Littera

--- a/pt/index.html
+++ b/pt/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Técnica em Desenvolvimento de Software e estudante de Engenharia de Software buscando oportunidade profissional para aplicar habilidades em HTML, CSS, JavaScript, TypeScript, Angular, React, PHP, Node e MySQL. Veja meu portfólio de Desenvolvimento Web!">
-    <title>Patrícia Dias</title>
+    <title>Patrícia Rodrigues</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
     <link rel="stylesheet" href="../assets/css/style.css">
 </head>
@@ -261,17 +261,36 @@
                 <div class="project-image"></div>
                 <div class="project-info">
                     <div>
-                        <h4>Prudente Casa Pet</h4>
-                        <p>Sistema Administrativo criado para empresa de Day Care e Hospedagem Pet que administra agenda e informações relevantes para empresa, e aplicativo que otimiza comunicação com clientes.</p>
-                        <p><strong>Tecnologias:</strong> Angular, Ionic, PHP API, MySQL Database, Firebase Storage, JWT, Figma, UML</p>
+                        <h4>Littera</h4>
+                        <p>Projeto desenvolvido para facilitar a administração de leituras pessoais, oferecendo ao usuário uma plataforma intuitiva e funcional para organizar sua experiência com livros.</p>
+                        <p><strong>Tecnologias:</strong> .NET, Razor Pages, Entity Framework e SQLiteL</p>
                     </div>
-                    <a href="./projeto1.html" title="Ver projeto Prudente Casa Pet">Ver mais</a>
+                    <a href="./project2.html" title="Ver projeto Littera">Ver mais</a>
                 </div>
                 <div class="prev" onclick="plusSlides(-1)"><span class="material-symbols-outlined">navigate_before</span></div>
                 <div class="next" onclick="plusSlides(1)"><span class="material-symbols-outlined">navigate_next</span></div>
                 <div class="dots">
                     <span class="dot active" onclick="currentSlide(1)"></span>
                     <span class="dot" onclick="currentSlide(2)"></span>
+                    <span class="dot" onclick="currentSlide(3)"></span>
+                </div>
+            </div>
+            <div class="slide">
+                <div class="project-image"></div>
+                <div class="project-info">
+                    <div>
+                        <h4>Prudente Casa Pet</h4>
+                        <p>Sistema Administrativo criado para empresa de Day Care e Hospedagem Pet que administra agenda e informações relevantes para empresa, e aplicativo que otimiza comunicação com clientes.</p>
+                        <p><strong>Tecnologias:</strong> Angular, Ionic, PHP API, MySQL Database, Firebase Storage, JWT, Figma, UML</p>
+                    </div>
+                    <a href="./project1.html" title="Ver projeto Prudente Casa Pet">Ver mais</a>
+                </div>
+                <div class="prev" onclick="plusSlides(-1)"><span class="material-symbols-outlined">navigate_before</span></div>
+                <div class="next" onclick="plusSlides(1)"><span class="material-symbols-outlined">navigate_next</span></div>
+                <div class="dots">
+                    <span class="dot" onclick="currentSlide(1)"></span>
+                    <span class="dot active" onclick="currentSlide(2)"></span>
+                    <span class="dot" onclick="currentSlide(3)"></span>
                 </div>
             </div>
             <div class="slide">
@@ -288,7 +307,8 @@
                 <div class="next" onclick="plusSlides(1)"><span class="material-symbols-outlined">navigate_next</span></div>
                 <div class="dots">
                     <span class="dot" onclick="currentSlide(1)"></span>
-                    <span class="dot active" onclick="currentSlide(2)"></span>
+                    <span class="dot" onclick="currentSlide(2)"></span>
+                    <span class="dot active" onclick="currentSlide(3)"></span>
                 </div>
             </div>
         </section> 
