Adicionando projeto PipocaMania

--- a/en/index.html
+++ b/en/index.html
@@ -264,6 +264,27 @@
                     <span class="dot active" onclick="currentSlide(1)"></span>
                     <span class="dot" onclick="currentSlide(2)"></span>
                     <span class="dot" onclick="currentSlide(3)"></span>
+                    <span class="dot" onclick="currentSlide(4)"></span>
+                </div>
+            </div>
+
+            <div class="slide">
+                <div class="project-image"></div>
+                <div class="project-info">
+                    <div>
+                        <h4>PipocaMania</h4>
+                        <p>Project developed to simplify the movie-going experience, offering customers and employees a practical, modern, and interactive platform to manage sessions and tickets.</p>
+                        <p><strong>Technologies:</strong> React Native, Expo, Firebase, and TheMovieDB API</p>
+                    </div>
+                    <a href="./project3.html" title="View PipocaMania project">View more</a>
+                </div>
+                <div class="prev" onclick="plusSlides(-1)"><span class="material-symbols-outlined">navigate_before</span></div>
+                <div class="next" onclick="plusSlides(1)"><span class="material-symbols-outlined">navigate_next</span></div>
+                <div class="dots">
+                    <span class="dot" onclick="currentSlide(1)"></span>
+                    <span class="dot active" onclick="currentSlide(2)"></span>
+                    <span class="dot" onclick="currentSlide(3)"></span>
+                    <span class="dot" onclick="currentSlide(4)"></span>
                 </div>
             </div>
             
@@ -281,8 +302,9 @@
                 <div class="next" onclick="plusSlides(1)"><span class="material-symbols-outlined">navigate_next</span></div>
                 <div class="dots">
                     <span class="dot" onclick="currentSlide(1)"></span>
-                    <span class="dot active" onclick="currentSlide(2)"></span>
-                    <span class="dot" onclick="currentSlide(3)"></span>
+                    <span class="dot" onclick="currentSlide(2)"></span>
+                    <span class="dot active" onclick="currentSlide(3)"></span>
+                    <span class="dot" onclick="currentSlide(4)"></span>
                 </div>
             </div>
             
@@ -301,7 +323,8 @@
                 <div class="dots">
                     <span class="dot" onclick="currentSlide(1)"></span>
                     <span class="dot" onclick="currentSlide(2)"></span>
-                    <span class="dot active" onclick="currentSlide(3)"></span>
+                    <span class="dot" onclick="currentSlide(3)"></span>
+                    <span class="dot active" onclick="currentSlide(4)"></span>
                 </div>
             </div>
         </section>
