--- a/pt/index.html
+++ b/pt/index.html
@@ -273,6 +273,26 @@
                     <span class="dot active" onclick="currentSlide(1)"></span>
                     <span class="dot" onclick="currentSlide(2)"></span>
                     <span class="dot" onclick="currentSlide(3)"></span>
+                    <span class="dot" onclick="currentSlide(4)"></span>
+                </div>
+            </div>
+            <div class="slide">
+                <div class="project-image"></div>
+                <div class="project-info">
+                    <div>
+                        <h4>PipocaMania</h4>
+                        <p>Projeto desenvolvido para facilitar a experiência de ida ao cinema, oferecendo aos clientes e funcionários uma plataforma prática, moderna e interativa para gerenciar sessões e ingressos.</p>
+                        <p><strong>Tecnologias:</strong> React Native, Expo, Firebase e TheMovieDB API</p>
+                    </div>
+                    <a href="./project3.html" title="Ver projeto PipocaMania">Ver mais</a>
+                </div>
+                <div class="prev" onclick="plusSlides(-1)"><span class="material-symbols-outlined">navigate_before</span></div>
+                <div class="next" onclick="plusSlides(1)"><span class="material-symbols-outlined">navigate_next</span></div>
+                <div class="dots">
+                    <span class="dot" onclick="currentSlide(1)"></span>
+                    <span class="dot active" onclick="currentSlide(2)"></span>
+                    <span class="dot" onclick="currentSlide(3)"></span>
+                    <span class="dot" onclick="currentSlide(4)"></span>
                 </div>
             </div>
             <div class="slide">
@@ -289,8 +309,9 @@
                 <div class="next" onclick="plusSlides(1)"><span class="material-symbols-outlined">navigate_next</span></div>
                 <div class="dots">
                     <span class="dot" onclick="currentSlide(1)"></span>
-                    <span class="dot active" onclick="currentSlide(2)"></span>
-                    <span class="dot" onclick="currentSlide(3)"></span>
+                    <span class="dot" onclick="currentSlide(2)"></span>
+                    <span class="dot active" onclick="currentSlide(3)"></span>
+                    <span class="dot" onclick="currentSlide(4)"></span>
                 </div>
             </div>
             <div class="slide">
@@ -308,7 +329,8 @@
                 <div class="dots">
                     <span class="dot" onclick="currentSlide(1)"></span>
                     <span class="dot" onclick="currentSlide(2)"></span>
-                    <span class="dot active" onclick="currentSlide(3)"></span>
+                    <span class="dot" onclick="currentSlide(3)"></span>
+                    <span class="dot active" onclick="currentSlide(4)"></span>
                 </div>
             </div>
         </section> 
